--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BReader</string>
     <string name="publishers">Publishers</string>
+    <string name="categories">Categories</string>
 </resources>
