Commit 1.5 Category list done :) Almost finished with books

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BReader</string>
     <string name="publishers">Publishers</string>
     <string name="categories">Categories</string>
+    <string name="books">Books</string>
 </resources>
