Commit 1.6 Almost finished with books

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="publishers">Publishers</string>
     <string name="categories">Categories</string>
     <string name="books">Books</string>
+    <string name="book_id">Book ID:</string>
+    <string name="best_seller">Best Seller:</string>
+    <string name="featured">Featured:</string>
+    <string name="price">Price:</string>
 </resources>
